# ML-SFA

./: .env.example  .gitignore  BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: auto-release.yml  ci.yml  release.yml
docs/design/: bart_sfm.md  joint_nn_sfa.md
docs/research/: ml_sfa_survey.md  model_selection.md
notebooks/: model_showcase.ipynb
scripts/: release.py
src/ml_sfa/: __init__.py  _types.py
src/ml_sfa/data/: __init__.py  simulator.py
src/ml_sfa/evaluation/: __init__.py  comparison.py  metrics.py
src/ml_sfa/models/: __init__.py  _sfa_loss.py  _types.py  bart_frontier.py  base.py  kernel_frontier.py  nn_frontier.py  parametric.py
src/ml_sfa/utils/: __init__.py  constraints.py  distributions.py
tests/: conftest.py
tests/integration/: test_bart_frontier_pipeline.py  test_model_comparison.py  test_nn_frontier_pipeline.py  test_parametric_pipeline.py
tests/unit/: test_bart_frontier.py  test_base.py  test_comparison.py  test_constraints.py  test_distributions.py  test_kernel_frontier.py  test_metrics.py  test_nn_frontier.py  test_package.py  test_parametric.py  test_sfa_loss.py  test_simulator.py
