[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-sfa"
version = "0.1.0"
description = "Machine Learning approaches to Stochastic Frontier Analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "torch>=2.2",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ml_sfa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ml_sfa --cov-report=term-missing"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
