[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ml-sfa"
dynamic = ["version"]
description = "Machine Learning approaches to Stochastic Frontier Analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "nbx" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/nbx-liz/ML-SFA"
Repository = "https://github.com/nbx-liz/ML-SFA"

[project.optional-dependencies]
nn = ["torch>=2.2"]
bart = ["pymc>=5.10", "pymc-bart>=0.6"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pandas-stubs>=2.0",
    "build>=1.0",
    "twine>=6.0",
    "vulture>=2.15",
    "torch>=2.2",
    "pymc>=5.10",
    "pymc-bart>=0.6",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ml_sfa/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_sfa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 88
exclude = ["src/ml_sfa/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["torch.*", "pymc.*", "pymc_bart.*", "statsmodels.*", "sklearn.*", "scipy.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["ml_sfa"]
omit = ["src/ml_sfa/_version.py"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
